# full-service

./: .devcontainer.json  .dockerignore  .env  .gitbook.yaml  .gitignore  .gitmodules  .mobconf  API.md  API_v1.md  API_v2.md  BRANCHING.md  Brewfile  CLA.md  CONTRIBUTING.md  Cargo.toml  DATABASE.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUMMARY.md  TERMS-OF-USE.md  codecov.yml  consensus-enclave.css  crates.js  gift-code.md  help.html  mob  overview.md  pyproject.toml  renovate.json  run_mobilecoin.sh  rust-toolchain  rustfmt.toml  search-index.js  settings.html  source-files.js  spam_tombestone.py
.internal-ci/test/fs-integration/: README.md  basic.py  demo.py  pyproject.toml  subaddress-receipt.py  test_config.json
cli/: README.md  config  forest_utils.py  fullservice.py  install.sh  mc_env.sh  pyproject.toml  readme.md  setup.py  smoke_test.py  wallet_muncher.py
cli/hacky_prototype/: aiocmd.py  very_hacky_cli.py
cli/mobilecoin/: __init__.py  cli.py  client.py  printable_pb2.py  utility.py
cli/old/: install.sh  mc_env.sh  setup.py
cli/old/mobilecoin/: cli.py  client.py
cli/old/test/: client_tests.py  stress.py
cli/test/: client_tests.py  stress.py  sync_benchmark.py  test_display.py
docs/: FAQ.md  (+3 more)
full-service/: API.md  Cargo.toml  README.md  build.rs
full-service/migrations/2020-21-09-165203_wallet_service/: down.sql  up.sql
full-service/migrations/2021-03-03-022428_create_idx_transaction_logs_block/: down.sql  up.sql
full-service/migrations/2021-03-03-035127_api_v2/: down.sql  up.sql
full-service/migrations/2021-03-07-192850_receipts/: down.sql  up.sql
full-service/migrations/2021-03-08-031049_gift_codes/: down.sql  up.sql
full-service/migrations/2021-03-25-042338_proof_to_confirmation/: down.sql  up.sql
full-service/migrations/2021-03-30-021521_slip10_account_key/: down.sql  up.sql
full-service/migrations/2021-03-30-143827_key_derivation_version/: down.sql  up.sql
full-service/migrations/2021-03-31-220723_nullable_transaction_log_account_id/: down.sql  up.sql
full-service/migrations/2021-03-31-220723_nullable_transaction_log_address/: down.sql  up.sql
full-service/migrations/2021-04-03-183001_reorder_account_fields/: down.sql  up.sql
full-service/migrations/2021-04-09-050201_multi_outlay_transaction_logs/: down.sql  up.sql
full-service/migrations/2021-04-20-182449_gift_code_two_entropies/: down.sql  up.sql
full-service/migrations/2021-06-25-225113_transaction_logs_nullable_assigned_subaddress_b58/: up.sql
full-service/migrations/2021-12-14-005344_txo_status/: down.sql  up.sql
full-service/migrations/2022-02-08-225206_simplify_gift_codes/: down.sql  up.sql
full-service/migrations/2022-02-15-200456_fog_enabled_accounts/: down.sql  up.sql
full-service/migrations/2022-02-28-190052_view-only-accounts/: down.sql  up.sql
full-service/migrations/2022-02-28-190052_view-only-accounts-and-txos/: down.sql  up.sql
full-service/migrations/2022-03-09-221715_view_only_txos/: down.sql  up.sql
full-service/migrations/2022-03-28-194805_create-view-only-transaction-logs/: down.sql  up.sql
full-service/migrations/2022-04-27-170453_add-key-image-to-view-only-txos/: down.sql  up.sql
full-service/migrations/2022-05-13-170243_view-only-account-subaddresses-and-txo-tracking/: down.sql  up.sql
full-service/migrations/2022-06-01-162825_txo_token_id/: up.sql
full-service/service/: Cargo.toml
full-service/src/: check_host.rs  config.rs  error.rs  fog_resolver.rs  lib.rs  scratch.txt  test_utils.rs  unsigned_tx.rs  validator_ledger_sync.rs
full-service/utils/: Cargo.toml
full-service/wallet/: Cargo.toml
mirror/: Cargo.toml  EXAMPLE.md  README.md  build.rs  example-client.js  generate-keys.js
mirror/proto/: wallet_mirror_api.proto  wallet_service_mirror_api.proto
mirror/src/: lib.rs  uri.rs
mirror/test/: Dockerfile  README.md  example-client.js  mirror-client.js  mirror-test.js  package-lock.json  package.json  run.sh  start.sh  stop.sh  test.sh
python/: README.md  protoc.sh  pyproject.toml
python-library/: .gitignore  FSDataObjects.py  accounts.py  basic.py  burn_transaction_test.py  create_account_test.py  dataobjects.py  export_check_all.py  fullservice.py  pyproject.toml  readme.md  test_cruncher.py  test_signer_burn_transaction.py  view_only_signer_flow.py
python-library/test-suite/: build-submit.py  burn_transaction_test.py  create_account_test.py
python/mobilecoin/: __init__.py  cli.py  client.py  client_async.py  client_v1.py  fog.py  token.py  tokens.py
python/tests/: conftest.py  stress.py  sync_benchmark.py  test_client.py  test_client_async.py  test_client_v1.py  test_mirror.py  test_single_node.py  test_token.py  test_tokens.py
signer/: Cargo.toml  README.md
signer/src/: lib.rs
t3/api/: Cargo.toml  build.rs
t3/connection/: Cargo.toml
tools/: .shared-functions.sh  build-fs.sh  build-signer-maturin.sh  build-signer.sh  build-testnet.sh  build_full_service.py  build_full_service.sh  build_mobilecoin.py  build_mobilecoin.sh  install_git_settings.sh  lint-fix.sh  lint.sh  local_network.py  mc_ledger_test.py  protobuf_update.sh  pyproject.toml  run-alphanet.sh  run-fs-offline.sh  run-fs.sh  run-mainnet.sh  run-testnet-no-wallet-db.sh  run-testnet.sh  run_full_service.py  run_mobilecoin.py  rustdoc.sh  start_mobilecoin_ledger.sh  test-python-integration.sh  test-with-coverage.sh  test.sh
tools/gha/: gpg_sign.py  macos_sign.py
tools/mirror/: run-full-service.sh  run-mirror-private.sh  run-mirror-public.sh  run-validator.sh  send-encrypted-request.sh
tools/test_utils/: constants.py  forest_utils.py  full_service.py  fullservice.py  utilities.py
transaction-signer/: Cargo.toml
transaction-signer/src/: full_service_fog_resolver.rs  lib.rs  main.rs  unsigned_tx.rs
validator-service/: Cargo.toml  lib.rs  server.rs  validator_blockchain_service.rs
validator-service/api/: Cargo.toml  build.rs
validator-service/service/: Cargo.toml
validator-service/src/: config.rs  lib.rs  server.rs
validator/api/: Cargo.toml  build.rs
validator/connection/: Cargo.toml
validator/service/: Cargo.toml
(+1987 files in other folders)
