cargo-features = ["resolver"]

[workspace]
resolver = "2"
members = [
    "full-service",
    "mirror",
    "signer",
    "t3/api",
    "t3/connection",
    "validator/api",
    "validator/connection",
    "validator/service",
]
exclude = ["ledger-mob", "mobilecoin"]

[profile.dev]
opt-level = 0

[profile.release]
debug = true
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false
strip = "symbols"

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "99c0520aa79401b69fb51d38172cd58c6a256cfb" }

# Fix issues with recent nightlies, bump curve25519-dalek version
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek.git", rev = "2931c688eb11341a1145e257bc41d8ecbe36277c" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "e966091845f27d49b0d9ba91fc99125e0c5f111c" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "e966091845f27d49b0d9ba91fc99125e0c5f111c" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "b76d8c3a50671b08af0874b25b2543d3302d794d" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "4fbaa3343301c62cfdbc3023c9f485257e6b718a" }

# Fix linker errors when compiling gRPC C++ library on systemd based Linux.
grpcio = { git = "https://github.com/tikv/grpc-rs.git", rev = "cc5d2ab4fa0a110d0fdaa49f12552d28a0348721" }

# Patch mc lib for git dependencies in ledger-mob
mc-core = { path = "./mobilecoin/core" }
mc-crypto-digestible = { path = "./mobilecoin/crypto/digestible" }
mc-crypto-hashes = { path = "./mobilecoin/crypto/hashes" }
mc-crypto-keys = { path = "./mobilecoin/crypto/keys" }
mc-crypto-ring-signature = { path = "./mobilecoin/crypto/ring-signature" }
mc-crypto-ring-signature-signer = { path = "./mobilecoin/crypto/ring-signature/signer" }
mc-transaction-core = { path = "./mobilecoin/transaction/core" }
mc-transaction-extra = { path = "./mobilecoin/transaction/extra" }
mc-transaction-signer = { path = "./mobilecoin/transaction/signer" }
mc-transaction-summary = { path = "./mobilecoin/transaction/summary" }
mc-transaction-types = { path = "./mobilecoin/transaction/types" }
mc-util-from-random = { path = "./mobilecoin/util/from-random" }
