cargo-features = ["resolver"]

[workspace]
resolver = "2"
members = [
    "full-service",
    "mirror",
    "signer",
    "t3/api",
    "t3/connection",
    "validator/api",
    "validator/connection",
    "validator/service",
]
exclude = ["ledger-mob", "mobilecoin"]

[profile.dev]
debug = true
opt-level = 3

[profile.release]
debug = true
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false
strip = "symbols"

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

# Patch mc lib for git dependencies in ledger-mob
mc-core = { path = "./mobilecoin/core" }
mc-crypto-digestible = { path = "./mobilecoin/crypto/digestible" }
mc-crypto-hashes = { path = "./mobilecoin/crypto/hashes" }
mc-crypto-keys = { path = "./mobilecoin/crypto/keys" }
mc-crypto-ring-signature = { path = "./mobilecoin/crypto/ring-signature" }
mc-crypto-ring-signature-signer = { path = "./mobilecoin/crypto/ring-signature/signer" }
mc-transaction-core = { path = "./mobilecoin/transaction/core" }
mc-transaction-extra = { path = "./mobilecoin/transaction/extra" }
mc-transaction-signer = { path = "./mobilecoin/transaction/signer" }
mc-transaction-summary = { path = "./mobilecoin/transaction/summary" }
mc-transaction-types = { path = "./mobilecoin/transaction/types" }
mc-util-from-random = { path = "./mobilecoin/util/from-random" }
