[package]
name = "mc-full-service"
version = "0.1.0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "full-service"
path = "src/bin/main.rs"

[features]
default = ["ip-check"]
ip-check = []

[dependencies]
mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-account-keys-slip10 = { path = "../mobilecoin/account-keys/slip10" }
mc-api = { path = "../mobilecoin/api" }
mc-attest-verifier = { path = "../mobilecoin/attest/verifier", default-features = false }
mc-common = { path = "../mobilecoin/common", default-features = false, features = ["loggers"] }
mc-connection = { path = "../mobilecoin/connection" }
mc-consensus-enclave-measurement = { path = "../mobilecoin/consensus/enclave/measurement" }
mc-consensus-scp = { path = "../mobilecoin/consensus/scp" }
mc-crypto-digestible = { path = "../mobilecoin/crypto/digestible", features = ["derive"] }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys", default-features = false }
mc-crypto-rand = { path = "../mobilecoin/crypto/rand", default-features = false }
mc-fog-report-connection = { path = "../mobilecoin/fog/report/connection" }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation" }
mc-ledger-db = { path = "../mobilecoin/ledger/db" }
mc-ledger-sync = { path = "../mobilecoin/ledger/sync" }
mc-mobilecoind = { path = "../mobilecoin/mobilecoind" }
mc-mobilecoind-api = { path = "../mobilecoin/mobilecoind/api" }
mc-mobilecoind-json = { path = "../mobilecoin/mobilecoind-json" }
mc-sgx-css = { path = "../mobilecoin/sgx/css" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-transaction-std = { path = "../mobilecoin/transaction/std" }
mc-util-from-random = { path = "../mobilecoin/util/from-random" }
mc-util-serial = { path = "../mobilecoin/util/serial", default-features = false }
mc-util-uri = { path = "../mobilecoin/util/uri" }

chrono = { version = "0.4", default-features = false, features = ["alloc"] }
crossbeam-channel = "0.5"
diesel = { version = "1.4.6", features = ["sqlcipher-bundled"] }
diesel-derive-enum = { version = "1", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
displaydoc = {version = "0.2", default-features = false }
dotenv = "0.15.0"
grpcio = "0.9.0"
hex = {version = "0.4", default-features = false }
num_cpus = "1.12"
rand = { version = "0.8", default-features = false }
rayon = "1.5"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "gzip"] }
retry = "1.3"
rocket = { version = "0.4.5", default-features = false }
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "diesel_sqlite_pool"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
strum = { version = "0.20", features = ["derive"] }
strum_macros = "0.20"
tiny-bip39 = "0.8.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[dev-dependencies]
mc-connection-test-utils = { path = "../mobilecoin/connection/test-utils" }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation", features = ["automock"] }
mc-fog-report-validation-test-utils = { path = "../mobilecoin/fog/report/validation/test-utils"}
tempdir = "0.3"
bs58 = "0.4.0"

[build-dependencies]
# clippy fails to run without this.
diesel = { version = "1.4.6", features = ["sqlite-bundled"] }
