[package]
name = "mc-full-service"
version = "1.9.0"
authors = ["MobileCoin"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "full-service"
path = "src/bin/main.rs"

[[bin]]
name = "transaction-signer"
path = "src/bin/transaction-signer.rs"

[dependencies]
mc-validator-api = { path = "../validator/api" }
mc-validator-connection = { path = "../validator/connection" }

mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-account-keys-slip10 = { path = "../mobilecoin/account-keys/slip10" }
mc-api = { path = "../mobilecoin/api" }
mc-attest-verifier = { path = "../mobilecoin/attest/verifier", default-features = false }
mc-blockchain-types = { path = "../mobilecoin/blockchain/types" }
mc-common = { path = "../mobilecoin/common", default-features = false, features = ["loggers"] }
mc-connection = { path = "../mobilecoin/connection" }
mc-consensus-enclave-measurement = { path = "../mobilecoin/consensus/enclave/measurement" }
mc-consensus-scp = { path = "../mobilecoin/consensus/scp" }
mc-crypto-digestible = { path = "../mobilecoin/crypto/digestible", features = ["derive"] }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys", default-features = false }
mc-crypto-rand = { path = "../mobilecoin/crypto/rand", default-features = false }
mc-crypto-ring-signature-signer = { path = "../mobilecoin/crypto/ring-signature/signer" }
mc-fog-report-connection = { path = "../mobilecoin/fog/report/connection" }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation" }
mc-ledger-db = { path = "../mobilecoin/ledger/db" }
mc-ledger-migration = { path = "../mobilecoin/ledger/migration" }
mc-ledger-sync = { path = "../mobilecoin/ledger/sync" }
mc-mobilecoind = { path = "../mobilecoin/mobilecoind" }
mc-mobilecoind-api = { path = "../mobilecoin/mobilecoind/api" }
mc-mobilecoind-json = { path = "../mobilecoin/mobilecoind-json" }
mc-sgx-css = { path = "../mobilecoin/sgx/css" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-transaction-std = { path = "../mobilecoin/transaction/std" }
mc-transaction-types = { path = "../mobilecoin/transaction/types" }
mc-util-from-random = { path = "../mobilecoin/util/from-random" }
mc-util-parse = { path = "../mobilecoin/util/parse" }
mc-util-serial = { path = "../mobilecoin/util/serial", default-features = false }
mc-util-uri = { path = "../mobilecoin/util/uri" }

base64 = "0.13.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
crossbeam-channel = "0.5"
diesel = { version = "1.4.8", features = ["sqlcipher-bundled"] }
diesel-derive-enum = { version = "1", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
displaydoc = {version = "0.2", default-features = false }
dotenv = "0.15.0"
grpcio = "0.10.3"
hex = {version = "0.4", default-features = false }
num_cpus = "1.12"
rand = { version = "0.8", default-features = false }
rayon = "1.5"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "gzip"] }
retry = "1.3"
rocket = { version = "0.4.5", default-features = false }
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "diesel_sqlite_pool"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
tiny-bip39 = "1.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }

[dev-dependencies]
mc-blockchain-test-utils = { path = "../mobilecoin/blockchain/test-utils" }
mc-connection-test-utils = { path = "../mobilecoin/connection/test-utils" }
mc-consensus-enclave-api = { path = "../mobilecoin/consensus/enclave/api" }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation", features = ["automock"] }
mc-fog-report-validation-test-utils = { path = "../mobilecoin/fog/report/validation/test-utils"}
tempdir = "0.3"
bs58 = "0.4.0"

[build-dependencies]
# clippy fails to run without this.
diesel = { version = "1.4.8", features = ["sqlcipher-bundled"] }
vergen = "7.0.0"
anyhow = "1.0"
