[package]
name = "mc-full-service"
version = "2.10.9"
authors = ["MobileCoin"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "full-service"
path = "src/bin/main.rs"

[dependencies]
mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-api = { path = "../mobilecoin/api" }
mc-attest-core = { path = "../mobilecoin/attest/core", default-features = false }
mc-attest-verifier = { path = "../mobilecoin/attest/verifier", default-features = false }
mc-attestation-verifier = "0.4"
mc-blockchain-types = { path = "../mobilecoin/blockchain/types" }
mc-common = { path = "../mobilecoin/common", default-features = false, features = [
    "loggers",
] }
mc-connection = { path = "../mobilecoin/connection" }
mc-consensus-enclave-measurement = { path = "../mobilecoin/consensus/enclave/measurement" }
mc-consensus-scp = { path = "../mobilecoin/consensus/scp" }
mc-core = { path = "../mobilecoin/core" }
mc-crypto-digestible = { path = "../mobilecoin/crypto/digestible", features = [
    "derive",
] }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys", default-features = false }
mc-crypto-ring-signature-signer = { path = "../mobilecoin/crypto/ring-signature/signer" }
mc-fog-report-connection = { path = "../mobilecoin/fog/report/connection" }
mc-fog-report-resolver = { path = "../mobilecoin/fog/report/resolver" }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation" }
mc-fog-sig-authority = { path = "../mobilecoin/fog/sig/authority" }
mc-ledger-db = { path = "../mobilecoin/ledger/db" }
mc-ledger-migration = { path = "../mobilecoin/ledger/migration" }
mc-ledger-sync = { path = "../mobilecoin/ledger/sync" }
mc-mobilecoind = { path = "../mobilecoin/mobilecoind" }
mc-mobilecoind-api = { path = "../mobilecoin/mobilecoind/api" }
mc-mobilecoind-json = { path = "../mobilecoin/mobilecoind-json" }
mc-rand = "1"
mc-sgx-core-types = "0.12"
mc-sgx-css = { path = "../mobilecoin/sgx/css" }
mc-transaction-builder = { path = "../mobilecoin/transaction/builder" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-transaction-extra = { path = "../mobilecoin/transaction/extra" }
mc-transaction-signer = { path = "../mobilecoin/transaction/signer" }
mc-transaction-summary = { path = "../mobilecoin/transaction/summary" }
mc-transaction-types = { path = "../mobilecoin/transaction/types" }
mc-util-from-random = { path = "../mobilecoin/util/from-random" }
mc-util-grpc = { path = "../mobilecoin/util/grpc" }
mc-util-parse = { path = "../mobilecoin/util/parse" }
mc-util-serial = { path = "../mobilecoin/util/serial", default-features = false }
mc-util-uri = { path = "../mobilecoin/util/uri" }
mc-validator-api = { path = "../validator/api" }
mc-validator-connection = { path = "../validator/connection" }
mc-watcher = { path = "../mobilecoin/watcher" }
mc-watcher-api = { path = "../mobilecoin/watcher/api" }

t3-api = { path = "../t3/api" }
t3-connection = { path = "../t3/connection" }

ledger-mob = { path = "../ledger-mob/lib" }

async-trait = "0.1.59"
base64 = "0.21.5"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
clap = { version = "4.4", features = ["derive", "env"] }
crossbeam-channel = "0.5"
diesel = { version = "2.1.0", features = ["chrono", "sqlite", "r2d2"] }
diesel-derive-enum = { version = "2", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
displaydoc = { version = "0.2", default-features = false }
dotenv = "0.15.0"
ed25519-dalek = { version = "2.0.0-pre.0", default-features = false }
futures = "0.3"
grpcio = { version = "0.13", default-features = false, features = ["prost-codec"] }
hex = { version = "0.4", default-features = false }
hex_fmt = "0.3.0"
itertools = "0.14.0"
libsqlite3-sys = { version = "0.26", features = ["bundled-sqlcipher"] }
num_cpus = "1.16"
prost = "0.11"
rand = { version = "0.8", default-features = false }
rayon = "1.7"
redact = { version = "0.1.7", features = ["serde"] }
reqwest = { version = "0.11.20", default-features = false, features = [
    "rustls-tls",
    "gzip",
] }
retry = "2.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = [
    "diesel_sqlite_pool",
] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde-big-array = "0.5.1"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.1"
tiny-bip39 = "1.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
mc-blockchain-test-utils = { path = "../mobilecoin/blockchain/test-utils" }
mc-connection-test-utils = { path = "../mobilecoin/connection/test-utils" }
mc-consensus-enclave-api = { path = "../mobilecoin/consensus/enclave/api" }
mc-crypto-ring-signature = { path = "../mobilecoin/crypto/ring-signature" }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation", features = [
    "automock",
] }
mc-fog-report-validation-test-utils = { path = "../mobilecoin/fog/report/validation/test-utils" }
mc-transaction-builder = { path = "../mobilecoin/transaction/builder", features = ["test-only"] }

bs58 = "0.5.0"
httpmock = "0.7.0"
tempdir = "0.3"
tokio = "1.27"
url = "2.3"
yare = "3"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.2.6", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
