[package]
name = "mc-full-service-mirror"
version = "2.10.7"
authors = ["MobileCoin"]
edition = "2018"
resolver = "2"

[[bin]]
name = "wallet-service-mirror-private"
path = "src/private/main.rs"

[[bin]]
name = "wallet-service-mirror-public"
path = "src/public/main.rs"

[[bin]]
name = "generate-rsa-keypair"
path = "src/generate-rsa-keypair/main.rs"

[dependencies]
mc-api = { path = "../mobilecoin/api" }
mc-common = { path = "../mobilecoin/common", features = ["loggers"] }
mc-util-grpc = { path = "../mobilecoin/util/grpc" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

boring = "4.4"
futures = "0.3"
generic-array = "0.14"
grpcio = "0.13"
hex = "0.4"
num_cpus = "1.16"
protobuf = "3.0"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "blocking",
] }
rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
rand_hc = "0.3"

[build-dependencies]
mc-util-build-grpc = { path = "../mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "../mobilecoin/util/build/script" }

cargo-emit = "0.2.1"
# Even though this is unused, it needs to be here otherwise Cargo brings in some weird mixture of packages/features that refuses to compile.
# Go figure ¯\_(ツ)_/¯
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
] }
