[tool.poetry]
name = "Full Service Python Library"
version = "1.0"
description = ""
authors = ["cxloe"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
rich = "^12.6.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
