# In the context of the FS integration tests, these installed as usual are our "dev" dependencies. 
# For your average consumer of the library, it should be used like "poetry install --no-dev" 

[tool.poetry]
name = "Full Service Python Library"
version = "1.0"
description = ""
authors = ["cxloe"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
rich = "^13.0.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
MonkeyType = "^22.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
