[tool.poetry]
name = "Full Service Python Tools"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
aioconsole = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
