[package]
name = "mc-transaction-signer"
version = "1.0.0"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "mc-transaction-signer"
path = "src/bin/main.rs"

[dependencies]
mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-account-keys-slip10 = { path = "../mobilecoin/account-keys/slip10" }
mc-api = { path = "../mobilecoin/api" }
mc-attest-verifier = { path = "../mobilecoin/attest/verifier", default-features = false }
mc-common = { path = "../mobilecoin/common" }
mc-consensus-scp = { path = "../mobilecoin/consensus/scp" }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys", default-features = false }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-transaction-std = { path = "../mobilecoin/transaction/std" }
mc-util-from-random = { path = "../mobilecoin/util/from-random" }
mc-util-parse = { path = "../mobilecoin/util/parse" }
mc-util-serial = { path = "../mobilecoin/util/serial", default-features = false }
mc-util-uri = { path = "../mobilecoin/util/uri" }

base64 = "0.13.0"
prost = { version = "0.10.1", default-features = false, features = ["prost-derive"] }
rand = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
tiny-bip39 = "0.8.0"