[package]
name = "mc-validator-service"
version = "1.0.0"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "mc-validator-service"
path = "src/bin/main.rs"

[dependencies]
mc-full-service = { path = "../full-service"}

mc-common = { path = "../mobilecoin/common", default-features = false, features = ["loggers"] }
mc-util-parse = { path = "../mobilecoin/util/parse" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

grpcio = "0.9.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
structopt = "0.3"
