[package]
name = "mc-full-service"
version = "1.9.0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "mc-full-service"
path = "src/bin/main.rs"

[[bin]]
name = "transaction-signer"
path = "src/bin/transaction-signer.rs"

[dependencies]
mc-full-service-utils = { path = "../utils" }
mc-full-service-wallet = { path = "../wallet" }

mc-validator-api = { path = "../../validator/api" }
mc-validator-connection = { path = "../../validator/connection" }

mc-account-keys = { path = "../../mobilecoin/account-keys" }
mc-account-keys-slip10 = { path = "../../mobilecoin/account-keys/slip10" }
mc-attest-verifier = { path = "../../mobilecoin/attest/verifier", default-features = false }
mc-blockchain-types = { path = "../../mobilecoin/blockchain/types" }
mc-common = { path = "../../mobilecoin/common", default-features = false, features = ["loggers"] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-consensus-enclave-measurement = { path = "../../mobilecoin/consensus/enclave/measurement" }
mc-consensus-scp = { path = "../../mobilecoin/consensus/scp" }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys", default-features = false }
mc-fog-report-connection = { path = "../../mobilecoin/fog/report/connection" }
mc-fog-report-resolver = { path = "../../mobilecoin/fog/report/resolver" }
mc-ledger-db = { path = "../../mobilecoin/ledger/db" }
mc-ledger-migration = { path = "../../mobilecoin/ledger/migration" }
mc-ledger-sync = { path = "../../mobilecoin/ledger/sync" }
mc-sgx-css = { path = "../../mobilecoin/sgx/css" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-util-parse = { path = "../../mobilecoin/util/parse" }
mc-util-serial = { path = "../../mobilecoin/util/serial", default-features = false }
mc-util-uri = { path = "../../mobilecoin/util/uri" }

base64 = "0.13.0"
diesel = { version = "1.4.8", features = ["sqlcipher-bundled"] }
displaydoc = {version = "0.2", default-features = false }
dotenv = "0.15.0"
grpcio = "0.10.3"
hex = {version = "0.4", default-features = false }
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "gzip"] }
rocket = { version = "0.4.5", default-features = false }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
tiny-bip39 = "1.0"
